tests/snapshots/examples_fixtures/aoc__2025__aoc_day8_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day8_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:31:20
   |
31 |         let left = slice(arr, 0, idx)
   |                    ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:32:21
   |
32 |         let right = slice(arr, idx + 1, len(arr))
   |                     ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:44:38
   |
44 |         parse_points(lines, idx + 1, push(acc, split_ints(s, ",")))
   |                                      ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:69:9
   |
69 |         push(acc, edge_key(points, i, j))
   |         ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:81:14
   |
81 |     let s1 = put({}, "p", parents)
   |              ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:82:14
   |
82 |     let s2 = put(s1, "sz", sizes)
   |              ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:83:14
   |
83 |     let s3 = put(s2, "c", comps)
   |              ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:84:14
   |
84 |     let s4 = put(s3, "a", last_a)
   |              ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:85:5
   |
85 |     put(s4, "b", last_b)
   |     ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:89:11
   |
89 |     match get(state, "p") {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:96:11
   |
96 |     match get(state, "sz") {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:103:11
    |
103 |     match get(state, "c") {
    |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:110:11
    |
110 |     match get(state, "a") {
    |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:117:11
    |
117 |     match get(state, "b") {
    |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:155:43
    |
155 |         root_sizes(parents, sizes, i + 1, push(acc, int_at(sizes, i)))
    |                                           ^^^^

Hint:
  Define it first: let push = ...;


error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/aoc/2025/aoc_day8_haskell_style.flx:175:18
    |
175 |     let state1 = fold(sorted_keys, state0, /(st, k) -> union_key(st, k))
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |                  ------------------------------------------------------- parameter 1 has type `Array<_>`

    |                  ------------------------------------------------------- this type mismatch is reported here

Note:
  expected parameter type: List<_>
  found parameter type: Array<_>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `List<_>` consistently.


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:177:15
    |
177 |     let out = put({}, "state", state1)
    |               ^^^

Hint:
  Define it first: let put = ...;

Help:
  Did you mean `out`?


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:178:5
    |
178 |     put(out, "keys", sorted_keys)
    |     ^^^

Hint:
  Define it first: let put = ...;

Help:
  Did you mean `out`?


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:191:20
    |
191 |     let top_keys = slice(sorted_keys, 0, 1000)
    |                    ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:207:17
    |
207 |     let state = get(run, "state")
    |                 ^^^

Hint:
  Define it first: let get = ...;

Found 20 errors.
== stdout ==
<not executed>
